For a documentation of all features, see http://semantic-mediawiki.org


== SMW 1.7.1 ==

THIS IS NOT A RELEASE YET 

Semantic MediaWiki 1.7.1 is currently in beta-quality and is not recommended for use in
production until the actual release.

* Added ability to sort dates as dates in tables generated by SMW (bug 25768).
* When there are only invalid query conditions, query answering is stopped (bug 33177).
* Fixed display of nearby values on Special:SearchByProperty (bug 34178).
* Fixed display of URL values (bug 34312, 34044).
* Fixed warning when browsing certain property pages (bug 34306).
* Fixed failiure of SMW_setup --delete when using postgresql (bug 31153).
* Fixed devision by 0 error whren setting the "Corresponds to" property to 0 (bug 32594).
* Fixed accept header send with SPARQL query requests (bug 32280).
* Fixed unresolved prefixed name in SPARQL queries (bug 33687).
* Fixed issues with modification date property occuring when using SMWSparqlStore (bug 30989).
* Fixed erroneous SPARQL for property value comparison queries (bug 30993).
* Fixed broken +index=x for records (bug 30284).
* Fixed querying of subobjects using 4store as a datastore.

== SMW 1.7.0.2 ==

Released on January 16, 2012.

* Fixed creation of concept cache and display of matching objects on concept pages (bug 32592, 32718).
* Fixed fatal error occurring for some invalid property definitions (bug 33652).
* Fixed error in RSS when using creator or date parameters (bug 33721).
* Fixed incorrect offset of export formats (bug 33726).

== SMW 1.7.0.1 ==

Released on January 9, 2012.

* Fixed bug in "further results" links causing the main column to be displayed twice on Special:Ask (bug 33473).
* Fixed incorrect case-sensitivity of the format parameter (bug 31138).
* Fixed internationalization of magic words.
* Fixed offset and limit value in further results links (bug 33575).

== SMW 1.7 ==

Released on January 1, 2012.
